Fix wrong expression for ENDIF in CMakeLists.txt (fix of commit 1aabce0f9)
* CMakeLists.txt [enable_checksums]: Remove enable_threads for ENDIF.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -213,7 +213,7 @@ OPTION(enable_checksums "Report erroneously cleared dirty bits" NO)
 IF(enable_checksums)
     IF(enable_munmap OR enable_threads)
         MESSAGE("CHECKSUMS not compatible with USE_MUNMAP or threads")
-    ENDIF(enable_threads)
+    ENDIF()
     ADD_DEFINITIONS("-DCHECKSUMS")
     SET(SRC ${SRC} checksums.c)
 ENDIF(enable_checksums)
