--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,6 +203,11 @@ ELSEIF(enable_mmap)
     ADD_DEFINITIONS("-DUSE_MMAP")
 ENDIF()
 
+OPTION(enable_dynamic_loading "Enable tracing of dynamic library data roots" ON)
+IF(NOT enable_dynamic_loading)
+    ADD_DEFINITIONS("-DIGNORE_DYNAMIC_LOADING")
+ENDIF()
+
 OPTION(enable_large_config "Optimize for large heap or root set" NO)
 IF(enable_large_config)
     ADD_DEFINITIONS("-DLARGE_CONFIG")
