--- a/.travis.yml
+++ b/.travis.yml
@@ -586,6 +586,7 @@ script:
 - if [ -f gctest.log ]; then cat gctest.log; fi
 - if [ -f disclaim_bench.log ]; then cat disclaim_bench.log; fi
 - if [ -f disclaim_test.log ]; then cat disclaim_test.log; fi
+- if [ -f disclaim_weakmap_test.log ]; then cat disclaim_weakmap_test.log; fi
 - if [ -f threadkey_test.log ]; then cat threadkey_test.log; fi
 - if [[ "$CSA_CHECK" == true ]]; then
     ${CC} --analyze -Xanalyzer -analyzer-output=text -Werror
