--- a/tests/tests.am
+++ b/tests/tests.am
@@ -124,11 +124,12 @@ check_PROGRAMS += disclaim_bench
 disclaim_bench_SOURCES = tests/disclaim_bench.c
 disclaim_bench_LDADD = $(test_ldadd)
 
-if THREADS
 TESTS += disclaim_weakmap_test$(EXEEXT)
 check_PROGRAMS += disclaim_weakmap_test
 disclaim_weakmap_test_SOURCES = tests/disclaim_weakmap_test.c
-disclaim_weakmap_test_LDADD = $(test_ldadd) $(THREADDLLIBS)
+disclaim_weakmap_test_LDADD = $(test_ldadd)
+if THREADS
+disclaim_weakmap_test_LDADD += $(THREADDLLIBS)
 endif
 
 endif
