--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,20 @@
 version: 8.0.0-{build}
 
+environment:
+  matrix:
+  - TARGET: cmake
+    CMAKE_CONFIG: Debug
+    CMAKE_OPTIONS: -Denable_gc_assertions=ON
+
 clone_depth: 50
 
+install:
+- cmd: git clone --depth=50 https://github.com/ivmai/libatomic_ops.git -b release-7_6
+
 build_script:
-  - git clone --depth=50 https://github.com/ivmai/libatomic_ops.git -b release-7_6
-  - cmake -Denable_gc_assertions=ON
-  - cmake --build . --config Debug
+- cmd: if [%TARGET%]==[cmake] (
+    cmake %CMAKE_OPTIONS% &&
+    cmake --build . --config %CMAKE_CONFIG% )
 
 test_script:
-  - ctest --build-config Debug -V
+- cmd: if [%TARGET%]==[cmake] ( ctest --build-config %CMAKE_CONFIG% -V )
