--- a/.travis.yml
+++ b/.travis.yml
@@ -265,11 +265,9 @@ matrix:
   - os: linux
     env:
     - CPPCHECK_ENABLE="-j16 --enable=information,performance,portability,style,warning extra/AmigaOS.c extra/MacOS.c extra/msvc_dbg.c extra/real_malloc.c extra/symbian.cpp"
-    sudo: required
   - os: linux
     env:
     - CPPCHECK_ENABLE="--enable=unusedFunction"
-    sudo: required
   - os: linux
     compiler: clang
     env:
@@ -526,8 +524,9 @@ matrix:
 
 before_install:
 - if [[ "$CPPCHECK_ENABLE" != "" ]]; then
+    CPPCHECK_VER=master;
     git clone --depth=3 https://github.com/danmar/cppcheck.git
-            ~/cppcheck -b master;
+            ~/cppcheck -b $CPPCHECK_VER;
     make --directory ~/cppcheck -j CXXFLAGS="-O3 -march=native -D NDEBUG";
   fi
 - if [[ "$AUTOMAKE_VER" != "" || "$LIBTOOL_VER" != ""
@@ -596,7 +595,7 @@ script:
         tests/*.c tests/*.cc tools/*.c;
   fi
 - if [[ "$CPPCHECK_ENABLE" != "" ]]; then
-    ~/cppcheck/cppcheck -q -f --error-exitcode=2 -U GC_API -U long -D CPPCHECK
+    ~/cppcheck/cppcheck -q -f --error-exitcode=2 -U GC_API -D CPPCHECK
         -I include -I libatomic_ops/src $CPPCHECK_ENABLE
         *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc tools/*.c
         extra/gc.c;
