--- a/.travis.yml
+++ b/.travis.yml
@@ -245,15 +245,12 @@ matrix:
   - os: linux
     env:
     - CPPCHECK_ENABLE="-j16 --enable=information,performance,portability,style,warning -D __SIZEOF_POINTER__=8 -U CLOCKS_PER_SEC -U FIXUP_POINTER -U GC_EXTERN -U STACKBOTTOM extra/AmigaOS.c extra/MacOS.c extra/msvc_dbg.c real_malloc.c extra/symbian.cpp"
-    sudo: required
   - os: linux
     env:
     - CPPCHECK_ENABLE="--enable=performance,portability,style,warning extra/gc.c"
-    sudo: required
   - os: linux
     env:
     - CPPCHECK_ENABLE="--enable=unusedFunction extra/gc.c"
-    sudo: required
   - os: linux
     compiler: clang
     env:
@@ -422,8 +419,9 @@ matrix:
 
 before_install:
 - if [[ "$CPPCHECK_ENABLE" != "" ]]; then
+    CPPCHECK_VER=master;
     git clone --depth=3 https://github.com/danmar/cppcheck.git
-            ~/cppcheck -b master;
+            ~/cppcheck -b $CPPCHECK_VER;
     make --directory ~/cppcheck -j CXXFLAGS="-O3 -march=native -D NDEBUG";
   fi
 - if [[ "$AUTOMAKE_VER" != "" || "$LIBTOOL_VER" != ""
@@ -489,7 +487,7 @@ script:
         extra/msvc_dbg.c tests/*.c tests/*.cc tools/*.c;
   fi
 - if [[ "$CPPCHECK_ENABLE" != "" ]]; then
-    ~/cppcheck/cppcheck -q -f --error-exitcode=2 -U GC_API -U long -D CPPCHECK
+    ~/cppcheck/cppcheck -q -f --error-exitcode=2 -U GC_API -D CPPCHECK
         -I include -I libatomic_ops/src $CPPCHECK_ENABLE
         *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc tools/*.c;
   fi
