--- a/tests/tests.am
+++ b/tests/tests.am
@@ -9,7 +9,8 @@
 # modified is included with the above copyright notice.
 
 # Common libs to _LDADD for all tests.
-test_ldadd = $(top_builddir)/libgc.la $(EXTRA_TEST_LIBS)
+test_ldadd = $(nodist_libgc_la_OBJECTS) $(top_builddir)/libgc.la \
+            $(EXTRA_TEST_LIBS)
 
 TESTS += gctest$(EXEEXT)
 check_PROGRAMS += gctest
